added doge menu for site nav, and use file-saver

--- a/css/banner.scss
+++ b/css/banner.scss
@@ -111,4 +111,15 @@ body {
 .footer {
   margin-top: 20px;
   font-size: 12px;
+  display: flex;
+  align-items: center;
+
+  img {
+    width: 32px;
+    height: 32px;
+  }
+
+  span {
+    margin-left: 10px;
+  }
 }
